# media-library-manager

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  bulk_delete.py  compose.yaml  pyproject.toml  release-please-config.json  run-dashboard.sh
.github/workflows/: ci.yml  release.yml
.playwright-mcp/: page-2026-04-04T07-18-17-753Z.yml  page-2026-04-04T07-19-53-040Z.yml  page-2026-04-04T07-25-44-025Z.yml  page-2026-04-04T07-26-00-922Z.yml
docs/: README.md  ai-project-map.md  architecture.md  cli-and-config.md  current-features.md  dashboard-and-api.md  integrations.md  planning-and-apply.md  scanning-and-detection.md  state-and-artifacts.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  main.jsx  styles.css  theme.css  theme.js
src/media_library_manager/: __init__.py  browser.py  cleanup_scan.py  cli.py  config.py  empty_folder_cleanup.py  folder_index.py  lan_connections.py  models.py  network.py  operation_storage.py  operations.py  path_repair.py  planner.py  provider_path_resolution.py  rclone_cli.py  scanner.py  scanner_storage.py  (+3 more)
tests/: test_browser.py  test_cleanup_scan.py  test_empty_folder_cleanup.py  test_folder_index.py  test_job_cancellation.py  test_lan_connections.py  test_network.py  test_operations.py  test_path_repair.py  test_planner.py  test_rclone_cli.py  test_rclone_target.py  test_scanner.py  test_state.py  test_storage_backends.py  test_sync_integrations.py  test_web_operations_tree.py  test_web_scan_selection.py  test_web_scan_storage.py
(+30 files in other folders)
