[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "media-library-manager"
version = "0.1.0"
description = "Scan movie and TV libraries across disks, detect duplicates, and build safe move/delete plans."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
media-library-manager = "media_library_manager.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"media_library_manager" = ["static/*"]
